Decrease size of LinkedIn and Twitter logos on mobile. Fixes #19

--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@
     margin-bottom:5px; 
     max-width: 40%
   }
+  .img-social {
+    height:30px;
+    width: 30px;
+  }
 }
 
 /* E.g. Desktops */
